overflow fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,10 +6,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  min-width: 0;
+  max-width: 1200px;
 }
-html,body{
+body{
   width: 100vw;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 .cards{
